fix：弹窗关闭overflow: hidden； 移除谷歌地图；修改搜索栏历史更新不及时问题

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -5,6 +5,8 @@
 
 body {
   color: #383838;
+  // 处理打开弹窗禁用滚动条导致宽度变宽布局发生轻微变化问题
+  overflow: auto !important;
 }
 // pc
 @media screen and(min-width:1000px) {
